Fixed about me gap

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -15,6 +15,10 @@
 }
 
 @media screen and (max-width: 1200px) {
+
+    #about {
+  margin-top: -8.5rem;
+}
   #desktop-nav {
     display: none;
   }
@@ -82,6 +86,10 @@
     justify-content: center;
     margin-left: -10rem;  /* shift left */
   }
+
+    #about {
+  margin-top: -8.5rem;
+}
     
   }
 }
@@ -166,6 +174,10 @@
     margin: 0 auto;
     width: 100%;
   }
+
+    #about {
+  margin-top: -7.5rem;
+}
 
   #projects .details-container {
     width: 90%;
